--- a/client/src/components/song/song.module.css
+++ b/client/src/components/song/song.module.css
@@ -1,7 +1,8 @@
 .songItem {
   margin: 5px;
   padding: 5px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 1px solid #031d44;
+  color: #031d44;
 }
 
 .song {
