--- a/client/src/components/navbar/navbar.module.css
+++ b/client/src/components/navbar/navbar.module.css
@@ -1,18 +1,22 @@
 .navbar {
-  margin: -8px;
+  margin: 0;
   padding: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #031d44;
+  background-color: rgb(9, 188, 138);
 }
 
 .linkBox {
-  background-color: #8affc1;
   padding: 6px;
   margin-left: 10px;
   margin-right: 10px;
   border-radius: 5px;
+  background-color: rgb(255, 255, 255);
+}
+
+.linkBox:hover {
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .link {
