--- a/client/src/components/song/song-card.module.css
+++ b/client/src/components/song/song-card.module.css
@@ -63,7 +63,7 @@
   border-bottom-right-radius: 5px;
 }
 
-.deleteButton {
+.deleteButtonContainer {
   top: 0;
   right: 0;
   padding: 2%;
@@ -72,4 +72,13 @@
   background-color: rgba(255, 255, 255, 0.75);
   border-top-right-radius: 5px;
   border-bottom-left-radius: 5px;
+}
+
+.deleteButton {
+  background: transparent;
+  margin: 0;
+  border: none;
+  font-size: 16px;
+  color: black;
+  padding: 2%;
 }
