--- a/client/src/pages/styles/generator.module.css
+++ b/client/src/pages/styles/generator.module.css
@@ -1,17 +1,24 @@
 .generatorContainer {
-  background-color: rgb(9, 188, 138);
   text-align: center;
+  margin: 0;
+  padding: 8px 8px 12px;
 }
 
-.subheading {
+h2.heading {
+  margin: 0;
+}
+
+h4.subheading {
   margin: 1% 0;
+  font-weight: normal;
+  font-size: 20px;
 }
 
 .generatorForm {
   display: block;
   text-align: center;
-  font-size: 24px;
-  color: rgb(24, 24, 24);
+  font-size: 16px;
+  color: black;
   margin: 0;
   padding: 0;
 }
@@ -35,36 +42,42 @@
 .textInput {
   display: inline-block;
   box-sizing: border-box;
-  background-color: rgb(104, 110, 131);
   color: inherit;
-  margin: 0 1%;
-  padding: 12px 20px;
-  border: 1px solid rgb(3, 29, 68);
+  font-size: 14px;
+  margin: 0 5px;
+  padding: 6px 24px;
+  border: 1px solid gray;
   border-radius: 5px;
 }
 
 .textInput::-webkit-input-placeholder {
-  color: rgba(3, 29, 68, 0.9);
+  font-size: 14px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.9);
 }
 
 .textInput:-ms-input-placeholder {
-  color: rgba(3, 29, 68, 0.9);
+  font-size: 14px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.9);
 }
 
 .textInput::placeholder {
-  color: rgba(3, 29, 68, 0.9);
+  font-size: 14px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.9);
 }
 
 .submitInput {
-  background-color: rgb(3, 29, 68);
-  color: rgb(104, 110, 131);
-  padding: 12px 20px;
-  margin: 1% 0;
+  background-color: rgb(9, 188, 138);
+  padding: 8px 20px;
+  margin: 1%;
   border: none;
   border-radius: 5px;
+  font-size: 18px;
   cursor: pointer;
 }
 
 .submitInput:hover {
-  background-color: rgba(3, 29, 68, 0.9);
+  background-color: rgba(9, 188, 138, 0.75);
 }
